# docs/swagger.json
@@ -135,25 +135,6 @@
                 }
             }
         },
-        "/domains/output": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "ドメイン"
-                ],
-                "summary": "スプレッドシートに出力する",
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    }
-                }
-            }
-        },
         "/domains/{id}": {
             "get": {
                 "description": "Get domain",
@@ -324,104 +305,9 @@
                     "ViewDNS"
                 ],
                 "summary": "Fetch domains",
-                "parameters": [
-                    {
-                        "description": "Fetch request",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.PostFetchRequest"
-                        }
-                    }
-                ],
                 "responses": {
                     "202": {
                         "description": "Accepted"
-                    }
-                }
-            }
-        },
-        "/logs": {
-            "get": {
-                "description": "Get log list",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "ログ"
-                ],
-                "summary": "Get logs",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "処理名",
-                        "name": "name",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "カテゴリー",
-                        "name": "category",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Limit",
-                        "name": "limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Offset",
-                        "name": "offset",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/response.Logs"
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Create new log",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "ログ"
-                ],
-                "summary": "Create log",
-                "parameters": [
-                    {
-                        "description": "作成ログ情報",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/request.CreateLog"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/response.Log"
-                        }
                     }
                 }
             }
@@ -579,179 +465,6 @@
                 }
             }
         },
-        "/tasks": {
-            "get": {
-                "description": "Get task list",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "タスク"
-                ],
-                "summary": "Get tasks",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/model.Task"
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Create new task",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "タスク"
-                ],
-                "summary": "Create task",
-                "parameters": [
-                    {
-                        "description": "作成タスク情報",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.CreateTaskRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "$ref": "#/definitions/model.Task"
-                        }
-                    }
-                }
-            }
-        },
-        "/tasks/execute": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "タスク"
-                ],
-                "summary": "全てのタスクを実行します",
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    }
-                }
-            }
-        },
-        "/tasks/{id}": {
-            "put": {
-                "description": "Update task information",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "タスク"
-                ],
-                "summary": "Update task",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Task ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "更新タスク情報",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.UpdateTaskRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/model.Task"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete task by id",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "タスク"
-                ],
-                "summary": "Delete task",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Task ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    }
-                }
-            }
-        },
-        "/tasks/{id}/execute": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "タスク"
-                ],
-                "summary": "タスクを実行します",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Task ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created"
-                    }
-                }
-            }
-        },
         "/webhook/analyze": {
             "post": {
                 "consumes": [
@@ -795,31 +508,6 @@
                 }
             }
         },
-        "model.CreateTaskRequest": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "integer"
-                }
-            }
-        },
-        "model.PostFetchRequest": {
-            "type": "object",
-            "required": [
-                "target"
-            ],
-            "properties": {
-                "target": {
-                    "type": "string"
-                }
-            }
-        },
         "model.Status": {
             "type": "string",
             "enum": [
@@ -828,6 +516,7 @@
                 "check_view",
                 "check_japan",
                 "crawl_comp_info",
+                "pending_output",
                 "done",
                 "trash"
             ],
@@ -837,6 +526,7 @@
                 "StatusCheckView",
                 "StatusCheckJapan",
                 "StatusCrawlCompInfo",
+                "StatusPendingOutput",
                 "StatusDone",
                 "StatusTrash"
             ]
@@ -875,61 +565,10 @@
                 "TargetStatusFetched"
             ]
         },
-        "model.Task": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string"
-                }
-            }
-        },
         "model.UpdateTargetRequest": {
             "type": "object",
             "properties": {
                 "ip": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.UpdateTaskRequest": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "integer"
-                }
-            }
-        },
-        "request.CreateLog": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "type": "string"
-                },
-                "message": {
                     "type": "string"
                 },
                 "name": {
@@ -1094,40 +733,6 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/response.Domain"
-                    }
-                },
-                "total": {
-                    "type": "integer"
-                }
-            }
-        },
-        "response.Log": {
-            "type": "object",
-            "properties": {
-                "category": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                }
-            }
-        },
-        "response.Logs": {
-            "type": "object",
-            "properties": {
-                "count": {
-                    "type": "integer"
-                },
-                "logs": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/response.Log"
                     }
                 },
                 "total": {
