# internal/interfaces/dto/request/log.go
@@ -1,13 +1,0 @@
-package request
-
-type GetLogs struct {
-	Pagination
-	Name     *string `json:"name"`
-	Category *string `json:"category"`
-}
-
-type CreateLog struct {
-	Name     string `json:"name"`
-	Category string `json:"category"`
-	Message  string `json:"message"`
-}
