# internal/model/log.go
@@ -1,11 +1,0 @@
-package model
-
-import "time"
-
-type Log struct {
-	ID        int       `gorm:"column:id;primaryKey;autoIncrement" json:"id"`
-	Name      string    `gorm:"column:name" json:"name"`
-	Category  string    `gorm:"column:category" json:"category"`
-	Message   string    `gorm:"column:message" json:"message"`
-	CreatedAt time.Time `gorm:"column:created_at;autoCreateTime" json:"created_at"`
-}
